version 0.2.7
- 'lbj_logger' object now has an (experimental) $plot() method.
- Objects inheriting from 'confrontation' now store event metadata. See ?event.
- Objects of class 'validator' now store (default) metadata on expression 
  language and rule severity.
- new helper functions: 'is_unique', 'all_unique', 'is_complete', 'all_complete'
- switched to 'tinytest' testing framework


version 0.2.6
- New methods 'all' and 'any' for 'validation' objects
- New 'plot' method for 'validator' objects.
- New 'plot' method for 'validation' objects.
- New 'as.data.frame' methods for 'validatorComparison' and 'cellComparison' 
  objects.
- New 'plot' method for 'validatorComparison' and 'cellComparison' objects.
- New 'barplot' method for 'validatorComparison' and 'cellComparison' objects.
- Improved 'plot'/'barplot' method for objects of class 'validator'.
- Bugfixes in 'cells' and 'compare'.
- The row order of output in 'cells' has changed to be more consistent with 
  row order in the output of 'compare'.
- The row 'new_missing' is renamed 'removed' in 'cellComparison' objects.
- Improved cross-references in reference manual


version 0.2.5
- Documentation updates (Thanks to Matthias Gomolka)
- Removed deprecated functions 'number_missing', 'fraction_missing', 
  'row_missing', 'number_unique', 'any_unplicated', 'any_missing'.
- Bugfix: the 'call' object in a 'confrontation' object was created incorrectly.
  This only affects printing.


version 0.2.4
- New set membership operator "%vin%", behaving consistently with "=="
- Set membership operator %in% is now replaced with %vin% (#80).
- Added `[[<-` and `[<-` methods for validator objects.
- Validation rules can now be endowed with user-defined metadata, see ?meta (#59).
- fixed (harmless) compiler warning (thanks to Brian Ripley)
- bugfix: empty [] selection on expressionset crashed (thanks to Anne Petersen)
- bugfix: NA in validating expression would crash parser (thanks to Masafumi Okada)


version 0.2.0