@@ -5,6 +5,7 @@ version 0.2.7
   language and rule severity.
 - new helper functions: 'is_unique', 'all_unique', 'is_complete', 'all_complete'
 - switched to 'tinytest' testing framework
+- Bugfix in algorithm for clustering rules by shared variables #98.
 
 
 version 0.2.6
